[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/art/ui/button/BttnSelectPressed.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/button/BttnConfiguracion.png" type="Texture" id=2]
[ext_resource path="res://src/UI/MenuLayer/Menus/CharacterSelectionMulti.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=4]
[ext_resource path="res://assets/art/ui/button/BttnSelect.png" type="Texture" id=5]
[ext_resource path="res://src/UI/MenuLayer/Components/CharacterSelector.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/art/ui/button/BttnRegresarPressed.png" type="Texture" id=8]
[ext_resource path="res://assets/art/ui/button/BttnConfiguracionPressed.png" type="Texture" id=9]
[ext_resource path="res://assets/art/ui/panel/PanelLimestone.png" type="Texture" id=10]
[ext_resource path="res://assets/art/ui/panel/PanelWood.png" type="Texture" id=12]
[ext_resource path="res://assets/art/ui/button/BttnRegresar.png" type="Texture" id=13]

[node name="CharacterSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
prev_menu = "ConfigureGame"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = -269.0
margin_right = 462.0
margin_bottom = 269.0
texture = ExtResource( 10 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -388.0
margin_top = 40.0
margin_right = 388.0
margin_bottom = 75.0
theme = ExtResource( 4 )
text = "Seleccionar personaje"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -178.0
margin_right = 291.5
margin_bottom = 146.0
texture = ExtResource( 12 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="CharacterSelectorPlayer1" parent="NinePatchRect/NinePatchRect" instance=ExtResource( 6 )]
anchor_bottom = 1.0
margin_left = 152.0
margin_right = 152.0

[node name="CharacterSelectorPlayer2" parent="NinePatchRect/NinePatchRect" instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -152.0
margin_right = -152.0

[node name="Buttons" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -388.0
margin_top = -104.0
margin_right = 388.0
margin_bottom = -40.0
alignment = 1

[node name="BttnRegresar" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_right = 256.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 8 )

[node name="BttnSelect" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )

[node name="BttnConfiguracion" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 520.0
margin_right = 776.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 9 )

[connection signal="pressed" from="NinePatchRect/Buttons/BttnRegresar" to="." method="_on_BttnRegresar_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnSelect" to="." method="_on_BttnSelect_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnConfiguracion" to="." method="_on_BttnConfiguracion_pressed"]
